# JARVIS-AI

./: .env.example  .gitignore  Makefile  README.md  TODAY.md  jarvis.db  pyproject.toml  requirements.txt  setup.py  start.bat
.github/workflows/: ci.yml  docker-publish.yml  release.yml
agents/: __init__.py  state.py
agents/graph/: __init__.py  edges.py  main_graph.py  nodes.py
agents/tools/: __init__.py  calendar_tools.py  email_tools.py  file_tools.py  memory_tools.py  notes_tools.py  planner.py  system_tools.py  task_tools.py  utility_tools.py  vision_tools.py  web_tools.py
automation/: __init__.py  engine.py
automation/browser/: __init__.py  manager.py
automation/computer/: __init__.py  apps.py  system.py
automation/files/: __init__.py  generator.py  manager.py
backend/: __init__.py  main.py
backend/api/: __init__.py  auth.py  automation_routes.py  calendar_routes.py  conversations.py  email_routes.py  files_routes.py  health.py  image_routes.py  memory_routes.py  notes.py  reminders.py  settings.py  tasks.py  video_routes.py  voice_routes.py  weather.py  website_routes.py
backend/core/: __init__.py  security.py
backend/middleware/: __init__.py  cors.py  rate_limiter.py
backend/models/: __init__.py
backend/schemas/: __init__.py  schemas.py
backend/services/: __init__.py  ai_service.py  websocket_manager.py
calendar_assistant/: __init__.py  google_calendar.py  manager.py  reminder.py  scheduler.py
config/: __init__.py  logging_config.py  settings.py
database/: __init__.py  connection.py  models.py
desktop/: forge.config.js  main.js  package.json  preload.js
docker/: Dockerfile.backend  Dockerfile.electron  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docs/: API.md  ARCHITECTURE.md  SETUP.md
email_assistant/: __init__.py  categorizer.py  drafter.py  manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AutomationPanel.tsx  CalendarView.tsx  ChatInput.tsx  ChatInterface.tsx  ConversationHistory.tsx  Dock.tsx  EmailPanel.tsx  EmptyState.tsx  ErrorBoundary.tsx  FloatingVoiceButton.tsx  Layout.tsx  LoadingSpinner.tsx  MemoryViewer.tsx  MessageBubble.tsx  NotesPanel.tsx  SettingsPage.tsx  Sidebar.tsx  TaskPanel.tsx  TypingIndicator.tsx  VoiceVisualizer.tsx
frontend/src/hooks/: useChat.ts  useTasks.ts  useVoice.ts
frontend/src/pages/: AuthPage.tsx  CalendarPage.tsx  ChatPage.tsx  EmailPage.tsx  FileManagerPage.tsx  HomeDashboard.tsx  ImageGenerationPage.tsx  NotesPage.tsx  SettingsPage.tsx  TasksPage.tsx  VideoWorkflowPage.tsx  WebsiteGeneratorPage.tsx
frontend/src/stores/: chatStore.ts  settingsStore.ts  voiceStore.ts
frontend/src/theme/: ThemeProvider.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  websocket.ts
memory/: __init__.py  conversation_memory.py  embeddings.py  long_term_memory.py  manager.py  user_profile.py  vector_store.py
notes/: __init__.py  manager.py  search.py
plugins/: __init__.py  base.py  manager.py
plugins/builtin/: __init__.py  calculator.py  news.py  weather.py
tests/: test_health.py
vision/: __init__.py  engine.py  image_processor.py
voice/: __init__.py  audio_utils.py  engine.py
voice/stt/: __init__.py  vosk_stt.py  whisper_stt.py
voice/tts/: __init__.py  openai_tts.py  piper_tts.py
voice/wakeword/: __init__.py  porcupine_wakeword.py
